Add OpenTelemetry metrics integration to Commons Pool 2 XA implementation
Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>